--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <!--
     function doRedirect()
     {
-        window.location.replace("latest/api/#com.monsanto.arch.cloudformation.model.package");
+        window.location.replace("latest/api/com/monsanto/arch/cloudformation/model/index.html");
     }
 
     doRedirect();
@@ -15,6 +15,6 @@
     </script>
 </head>
 <body>
-<a href="latest/api/#com.monsanto.arch.cloudformation.model.package">Go to the CloudFormation Template Generator documentation</a>
+<a href="latest/api/com/monsanto/arch/cloudformation/model/index.html">Go to the CloudFormation Template Generator documentation</a>
 </body>
 </html>
