--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -7,13 +7,14 @@
     <!--
     function doRedirect()
     {
-        window.location.replace("latest/api/com/monsanto/arch/cloudformation/model/index.html");
+        window.location.replace("latest/api/#com.monsanto.arch.cloudformation.model.package");
     }
+
     doRedirect();
     //-->
     </script>
 </head>
 <body>
-<a href="latest/api/com/monsanto/arch/cloudformation/model/index.html">Go to the CloudFormation Template Generator documentation</a>
+<a href="latest/api/#com.monsanto.arch.cloudformation.model.package">Go to the CloudFormation Template Generator documentation</a>
 </body>
 </html>
