fixed index page for scaladoc

--- a/src/site/index.html
+++ b/src/site/index.html
@@ -4,17 +4,16 @@
     <meta charset="UTF-8">
     <title>CloudFormation Template Generator Library</title>
     <script language="JavaScript">
-    <!--
-    function doRedirect()
-    {
-        window.location.replace("latest/api/#com.monsanto.arch.cloudformation.model.package");
-    }
-
-    doRedirect();
-    //-->
+        <!--
+        function doRedirect()
+        {
+            window.location.replace("latest/api/com/monsanto/arch/cloudformation/model/index.html");
+        }
+        doRedirect();
+        //-->
     </script>
 </head>
 <body>
-<a href="latest/api/#com.monsanto.arch.cloudformation.model.package">Go to the CloudFormation Template Generator documentation</a>
+<a href="latest/api/com/monsanto/arch/cloudformation/model/index.html">Go to the CloudFormation Template Generator documentation</a>
 </body>
 </html>
